# sddo-sept2022

./: .dockerignore  .gitignore  Dockerfile  TestDockerfile  docker-compose-test.yml  docker-compose.yml  docker-entrypoint.sh  fabfile.py  manage.py  package-lock.json  package.json  readme.md  runTests.sh
.github/: dependabot.yml
.github/workflows/: main.yml
cyod/: admin.py  apps.py  models.py  urls.py  views.py
cyod/migrations/: 0001_initial.py  0002_order_date_placed.py
docker/: bashrc.sh
poetry/: pyproject.toml
sddo/: admin.py  db.sqlite3  urls.py  wsgi.py
sddo/settings/: base.py
src/: manage.py
src/core/: db.sqlite3  middleware.py  urls.py  views.py  wsgi.py
src/core/settings/: base.py
src/core/templates/: _form.html  _header.html  _login.html  about.html  base.html
src/core/test/: test_middleware.py  test_views.py
src/cyod/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/cyod/migrations/: 0001_initial.py  0002_order_user.py  0003_alter_order_comments_alter_order_date_placed_and_more.py  0003_product_image_alter_product_description.py  0004_alter_order_date_placed_alter_orderitem_order_and_more.py  0005_alter_order_date_placed.py  0005_remove_orderitem_order_order_order_items.py  0006_alter_order_date_placed.py  0006_remove_order_order_items_orderitem_order.py  0007_order_town.py  0008_alter_order_town.py  0009_alter_order_town.py  0010_alter_order_town.py  0011_alter_order_town.py
src/cyod/templates/: cyod.html
src/cyod/templates/orders/: basket.html  confirmation.html  order.html  order_history.html
src/cyod/templates/products/: _product  _product_card.html  product_page.html  products.html
src/cyod/test/: test_forms.py  test_models.py  test_modelspy  test_views.py
src/sddo/: manage.py
src/sddo/sddo/: asgi.py  settings.py  urls.py  wsgi.py
src/static/css/: custom.css
src/user/: admin.py  forms.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
src/user/test/: test_forms.py  test_models.py  test_views.py
(+6 files in other folders)
