[tool.poetry]
name = "sddo"
version = "0.0.1"
description = "Software Development and dev-ops project, creating a platform to update hardward"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "~4.0"
gunicorn = {version = "~20.0", optional = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
fabric = "~2.5"
ptvsd = "^4.3.2"

# Linters etc.
black = "20.8b1"
detect-secrets = "~0.14"
flake8 = "3.8.3"
pre-commit = "~2.11"


[tool.black]
line_length = 90
target-version = ['py38']
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
    | .+/migrations
  )/
)
'''